src/tui/ui/snapshots/mailypoppins__tui__ui__golden_frames__golden_help_overlay.snap
---
source: src/tui/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |╭ Mail ──────────────────────────────────╮╭ Headers ───────────────────────────────────────────────────────────────────╮
01 |│> 󰅲 Inbox  5                      ╭ Help ──────────────────────────────────────────╮>                                 │
02 |│  󰏫 Drafts  2                     │  GLOBAL                                        │                                  │
03 |│  󰑫 Sent 41                       │  q           Quit                              │  ✓                               │
04 |│  󰄼 Archive 128                   │  1-9         Jump to mailbox                   │                                  │
05 |│                                  │  Tab         Cycle focus forward               │                                  │
06 |╰──────────────────────────────────│  Shift+Tab   Cycle focus backward              │──────────────────────────────────╯
07 |╭ Inbox ───────────────────────────│  ?           Toggle this help                  │──────────────────────────────────╮
08 |│   DATE       SUBJECT             │  :           Command palette (run an action by │                                  │
09 |│  2026-07-28 󰃭  Einladung: Baust│  Ctrl+p      Command palette (run an action by │8-03T10:30:00+02:00               │
10 |│   2026-07-27 Re: Statusbericht KW│  z           Zoom / unzoom the focused pane    │                                  │
11 |│  2026-07-26  Scan 2026-07-26 (3│  !           Toggle activity log               │                                  │
12 |│   2026-07-24 Wochenrückblick: seh│  x           Send current draft (approve + send│                                  │
13 |│   2026-07-21  Rechnung 2026-0714│  ff          Search all mail (sender, subject, │ed to Exchange (no Graph in v1).  │
14 |│                                  │  cn          New draft                         │──────────────────────────────────╯
15 |│                                  │  gm          Go to mailboxes (sidebar)         │──────────────────────────────────╮
16 |│                                  │  ga          Switch account                    │                                  │
17 |│                                  │  ss          Quick sync                        │                                  │
18 |│                                  │  sS          Full sync                         │                                  │
19 |│                                  │  sl          Activity log overlay              │                                  │
20 |│                                  │  sc          Open config.toml in $EDITOR       │                                  │
21 |│                                  │  sf          Open log file in $EDITOR          │                                  │
22 |│                                  │  Space m     Switch to Mail view               │                                  │
23 |│                                  │  Space c     Switch to Contacts view           │                                  │
24 |│                                  │  Space a     Switch to Calendar view           │                                  │
25 |│                                  │                                                │                                  │
26 |│                                  │  MESSAGE (list, headers, body)                 │                                  │
27 |│                                  │  J / K       Next / previous message           │                                  │
28 |╰──────────────────────────────────│  Enter / e   Open in editor (mail read-only)   │                                  │
29 |╭ Activity ────────────────────────│  r           Reply                             │                                  │
30 |│  No activity yet                 │  a           Archive                           │                                  │
31 |│                                  │  d           Delete                            │                                  │
32 |│                                  │  u           Toggle read/unread                │                                  │
33 |│                                  │  *           Toggle flag/star                  │                                  │
34 |╰──────────────────────────────────│  M           Move to mailbox (fuzzy picker)    │                                  │
35 |╭ View ────────────────────────────│  y           Copy selector (mp://)             │                                  │
36 |│     mail  |  contacts  |  calenda│  Esc         Clear selection / return to list  │                                  │
37 |╰──────────────────────────────────│  gj / gk     Next / previous message           │──────────────────────────────────╯
38 | HELP                              ╰─────────────────── 1-36/107 ───────────────────╯
39 | ? help                                                                                            2 unread | Inbox 1/5
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
02 |bold@36..44
09 |bg:surface+fg:selection+bold@1..35
11 |bold@1..35
26 |bold@36..67
36 |bold@5..11
38 |bold@0..6 bg:surface@6..35 bg:surface@85..120
39 |bg:surface@0..120
