src/tui/ui/snapshots/mailypoppins__tui__ui__golden_frames__golden_mail_view_flagged_filter.snap
---
source: src/tui/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |╭ Mail ──────────────────────────────────╮╭ Headers ───────────────────────────────────────────────────────────────────╮
01 |│> 󰅲 Inbox  5                            ││ From: Anna Weber <anna.weber@example.com>                                  │
02 |│  󰏫 Drafts  2                           ││ To: sylvain@example.org                                                    │
03 |│  󰑫 Sent 41                             ││ Subj: Re: Statusbericht KW31                                               │
04 |│  󰄼 Archive 128                         ││ Date: 2026-07-27  [inbox]                                                  │
05 |│                                        ││                                                                            │
06 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
07 |╭ Inbox (flagged) ───────────────────────╮╭ Body ──────────────────────────────────────────────────────────────────────╮
08 |│   DATE       SUBJECT                   ││Danke, sieht gut aus.                                                       │
09 |│   2026-07-27  Re: Statusbericht KW31  ││                                                                            │
10 |│   2026-07-24  Wochenrückblick: sehr … ││Ein Punkt bleibt offen: der export-Schritt.                                 │
11 |│                                        ││                                                                            │
12 |│                                        ││                                                                            │
13 |│                                        ││                                                                            │
14 |│                                        ││                                                                            │
15 |│                                        ││                                                                            │
16 |│                                        ││                                                                            │
17 |│                                        ││                                                                            │
18 |│                                        ││                                                                            │
19 |│                                        ││                                                                            │
20 |│                                        ││                                                                            │
21 |│                                        ││                                                                            │
22 |│                                        ││                                                                            │
23 |│                                        ││                                                                            │
24 |│                                        ││                                                                            │
25 |│                                        ││                                                                            │
26 |│                                        ││                                                                            │
27 |│                                        ││                                                                            │
28 |╰────────────────────────────────────────╯│                                                                            │
29 |╭ Activity ──────────────────────────────╮│                                                                            │
30 |│  No activity yet                       ││                                                                            │
31 |│                                        ││                                                                            │
32 |│                                        ││                                                                            │
33 |│                                        ││                                                                            │
34 |╰────────────────────────────────────────╯│                                                                            │
35 |╭ View ──────────────────────────────────╮│                                                                            │
36 |│     mail  |  contacts  |  calendar     ││                                                                            │
37 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
38 | MAIL   j/k Navigate  v Select  J / K Next/prev  Enter / e Open (read-only)  r Reply  a Archive  d Delete  Esc Back
39 | ? help                                                                                                   Inbox 1/2 (5)
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
01 |bold@43..50
02 |bold@43..48
03 |bold@43..50
04 |bold@43..50
09 |bg:surface+fg:selection+bold@1..41
10 |bg:surface@71..77
36 |bold@5..11
38 |bold@0..6 bg:surface@6..8 bg:surface+bold@8..11 bg:surface@11..22 bg:surface+bold@22..23 bg:surface@23..32 bg:surface+bold@32..37 bg:surface@37..49 bg:surface+bold@49..58 bg:surface@58..77 bg:surface+bold@77..78 bg:surface@78..86 bg:surface+bold@86..87 bg:surface@87..97 bg:surface+bold@97..98 bg:surface@98..107 bg:surface+bold@107..110 bg:surface@110..120
39 |bg:surface@0..120
